<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/location_and_map">

        <ListPreference
            app:entries="@array/map_entries"
            app:entryValues="@array/map_values"
            app:iconSpaceReserved="false"
            app:key="mapType"
            android:defaultValue="2"
            app:title="@string/map_type"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:entries="@array/cache_size"
            app:entryValues="@array/cache_size_values"
            app:iconSpaceReserved="false"
            android:defaultValue="1"
            app:key="cacheSize"
            app:title="@string/cache_size"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="multiStopEnabled"
            android:title="@string/map_multi_stop_touch"
            android:summary="@string/multi_stop_touch_summary"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">

        <Preference
            app:key="me"
            app:persistent="false"
            app:iconSpaceReserved="false"
            app:summary="@string/about_me"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Contact Info">
        <Preference
            app:iconSpaceReserved="false"
            app:key="telegram"
            app:summary="\@yohan_nes"
            app:title="Telegram" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="email"
            app:summary="yohannes222ethiopia@gmail.com"
            app:title="Email" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="github"
            app:summary="https://github.com/yohannesTz"
            app:title="Github" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="personal-page"
            app:summary="https://yohannestz.com"
            app:title="Personal page" />
    </PreferenceCategory>

</PreferenceScreen>